# first-python-package

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
docs/: conf.py  index.rst
docs/_build/: .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/reference/: history.doctree  imppkg.doctree  imppkg.harmonic_mean.doctree  imppkg.harmony.doctree  imppkg.hello.doctree  modules.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/imppkg/: harmony.html
docs/_build/_sources/: index.rst.txt
docs/_build/_sources/reference/: history.rst.txt  imppkg.rst.txt
docs/_build/reference/: history.html  imppkg.harmonic_mean.html  imppkg.harmony.html  imppkg.hello.html  imppkg.html  modules.html
first_python_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pkg_readme/: README.md
src/first_python_package.egg-info/: PKG-INFO  SOURCES.txt
src/imppkg/: harmonic_mean.c  harmonic_mean.pyx  harmony.py  hello.py
src/pubpypack_harmony_ricardo_zambrano.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_harmonic_mean.py
