[metadata]
name = first-python-package
version = 0.0.1
url = https://github.com/rzambrano1/first-python-package
author = Ricardo Zambrano
author_email = "Ricardo Zambrano" <rzambrano@gmail.com>

description = This package does amazing things
long_description = file: ./pkg_readme/README.md 
long_description_content_type = text/markdown

license = MIT
license_files = LICENSE 
classifiers = License :: OSI Approved :: MIT License 
