[metadata]
name = first-python-package
version = 0.0.1
url = https://github.com/rzambrano1/first-python-package
author = Ricardo Zambrano
author_email = "Ricardo Zambrano" <rzambrano@gmail.com>

description = This package does amazing things
long_description = file: ./pkg_readme/README.md 
long_description_content_type = text/markdown

license = MIT
license_files = LICENSE 
classifiers = License :: OSI Approved :: MIT License 

[options]
include_package_data = True

python_requires = >=3.9

install_requires =
    termcolor>=1.1.0,<2

package_dir = 
    = src
packages = find:

[options.packages.find]
where = src

exclude = 
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main

######################
# Tool configuration #
######################

[tool:pytest]

testpaths = ./test/
# ex.5.3 p.62
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]

# p.62
branch = True 
source = imppkg 

[coverage:report]

# p.63
show_missing = True 
# p.65
# An option for when the project grows and the report is hard to read
skip_covered = True

[coverage:paths]

# p.64
source = 
    src/imppkg/
    */site-packages/imppkg/

[tox:tox]

isolated_build = True

envlist = py310, py39

[testenv]

deps = 
    pytest
    pytest-cov
    pytest-randomly

commands = pytest {posargs}

